Fixed no gap support Chromium

--- a/index.css
+++ b/index.css
@@ -5,10 +5,6 @@ html > * {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-body {
-    margin: 0 8em;
-}
-
 /* Custom font size */
 h1 {
     font-size: 6em;
@@ -28,7 +24,10 @@ h3 {
     flex-direction: column;
 	width: 100%;
 	min-height: 1920px;
-    row-gap: 400px;
+}
+
+.container > * {
+    margin: 125px 0px 350px 0px;
 }
 
 /* Rows */
@@ -36,7 +35,7 @@ h3 {
 .row-middle,
 .row-bottom {
     display: flex;
-    width: 100%;
+    width: 85%;
     justify-content: space-between;
 }
 
